--- a/package.json
+++ b/package.json
@@ -4,5 +4,13 @@
   "main": "index.js",
   "repository": "git@github.com:erdemuslu/react-mutiny.git",
   "author": "Erdem Uslu <usluerdem@yandex.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react-hooks": "^1.7.0"
+  }
 }
