--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
-    "clean": "rm -rf .cache dist"
+    "clean": "rm -rf .cache dist",
+    "publish": "yarn clean && yarn build && surge dist react-mutiny.surge.sh"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
